cmake_minimum_required(VERSION 2.6)

PROJECT(indyva-cpp)

#FIND_PACKAGE(Boost REQUIRED COMPONENTS graph)
#LINK_DIRECTORIES ( ${Boost_LIBRARY_DIRS} )

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/vendor/libjson-rpc-cpp)

SET(INDYVACPP_MAJOR_VERSION 0)
SET(INDYVACPP_MINOR_VERSION 1)
SET(INDYVACPP_PATCH_VERSION 0)


